[gd_scene load_steps=5 format=3 uid="uid://7gv6q50fuutj"]

[ext_resource type="Script" path="res://src/Player/fps_player.gd" id="1_sy51s"]
[ext_resource type="PackedScene" uid="uid://bvbdwb4mdybul" path="res://src/Phone/Phone.tscn" id="2_si6t8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_emkox"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6b3ky"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_sy51s")

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_emkox")

[node name="MeshInstance3d" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_6b3ky")

[node name="Head" type="Node3D" parent="."]

[node name="Camera3d" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.468479, -0.463024)

[node name="RayCast3d" type="RayCast3D" parent="Head/Camera3d"]
transform = Transform3D(2.98023e-08, 0, 1, 0, 1, 0, -1, 0, 2.98023e-08, 0, -0.00588068, 0.463024)
target_position = Vector3(60, 0, 0)

[node name="HoldPos" type="Marker3D" parent="Head/Camera3d"]
transform = Transform3D(0.939693, 0.048782, -0.338523, 0, 0.989776, 0.142629, 0.34202, -0.134027, 0.930085, 0.503, -0.248479, -0.579976)

[node name="InspectPos" type="Marker3D" parent="Head/Camera3d"]
transform = Transform3D(0.939693, 0, -0.34202, 0, 1, 0, 0.34202, 0, 0.939693, 0.2, 0, -0.4)

[node name="ItemHolder" type="Node3D" parent="Head/Camera3d"]
transform = Transform3D(0.939693, 0.048782, -0.338523, 0, 0.989776, 0.142629, 0.34202, -0.134027, 0.930085, 0.503, -0.248479, -0.579976)

[node name="Phone" parent="Head/Camera3d/ItemHolder" instance=ExtResource("2_si6t8")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
